--- a/Gravity.UI/Gravity.UI.csproj
+++ b/Gravity.UI/Gravity.UI.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Gravity.Logic\Gravity.Logic.csproj" />
+  </ItemGroup>
+
 </Project>
